@@ -1,8 +1,6 @@
-//Copyright 2023 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+//Copyright 2024 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 
 package com.picimako.mockitools.util;
-
-import static java.util.stream.Collectors.toList;
 
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.SmartPointerManager;
@@ -17,7 +15,7 @@ import java.util.List;
 public final class PointersUtil {
 
     public static <T extends PsiElement> List<SmartPsiElementPointer<T>> toPointers(List<T> calls) {
-        return calls.stream().map(PointersUtil::toPointer).collect(toList());
+        return calls.stream().map(PointersUtil::toPointer).toList();
     }
 
     @NotNull
